@@ -1,5 +1,6 @@
 Search API 1.x, dev (xx/xx/xxxx):
 ---------------------------------
+- #2387161 by drunken monkey: Added a hook for altering search results.
 
 Search API 1.14 (12/26/2014):
 -----------------------------
